--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <div style="display:inline-block; padding-top: 100px; margin-right: 40px; margin-left: 40px;">
         <div class="image" style="display:inline-block;">
             <div class="subimage">
-                <img src="wasim.jpeg" width="300px" style="margin-left: auto; margin-right: auto; display: block; margin-top:100px;">
+                <img src="yankee.PNG" width="300px" style="margin-left: auto; margin-right: auto; display: block; margin-top:100px;">
                 <p style="text-align:center;padding-top:20px; font-size:0.95em;color:#001C55; padding-right: 70px; padding-left: 70px; max-width:500px">Photo of me at the Boeing, taken April 2023</p>
             </div>
         </div>
@@ -151,7 +151,7 @@
 <div>
 <div id="contact" style="width:100%; text-align:center; padding-top:75px; margin-top:-30px; margin-bottom:0px; min-width:600px; color:#00d9ff;">
     <h1 style="font-size:2.3em; text-align: center;">Contact Me</h1><br>
-    <p style="font-size:1.1em; margin-bottom:15px;">Feel free to send a message on LinkedIn...<br> or send me an email at akramw574@gmail.com.</p>
+    <p style="font-size:1.1em; margin-bottom:15px;">Feel free to send a message on LinkedIn...<br> or send me an email at majumderyankee8@gmail.com.</p>
     <div class="tooltip">
         <div style="z-index: 0; text-align:center; display: inline-block; position:relative; width: 50px; height: 50px; padding:10px; cursor: pointer; font-size: 50px; margin-right:10px;" onmouseover="shadow('giticon')" onmouseout="unshadow('giticon')" onclick="window.open('https://www.github.com/akramw','_blank')">
             <i id="giticon" class="fa fa-github" style="color:#88adb6; border-radius: 110px; width: 50px;"></i>
