--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="logo">Yankee Hateman</div>
+        <div class="logo">Yankee Majumder</div>
         <ul class="main-nav">
             <li><a href="#home">Home</a></li>
             <li><a href="#education">Education</a></li>
