--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="ConsoleLogo.png">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <title>I hate this  world</title>
+    <title>My Profolio</title>
     <style>
         * {
             box-sizing: border-box;
@@ -125,7 +125,7 @@
             <li><a href="#certification">Certification</a></li>
             <li><a href="#experience">Experience</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href=" #Resume" class="nav-links" style="background-color: rgb(177, 247, 214,0.5);"><i class="fa fa-download"></i>&nbsp;&nbsp; Resume</a</li>
+            <li><a href="Resume.pdf" class="nav-links" style="background-color: rgb(177, 247, 214,0.5);"><i class="fa fa-download"></i>&nbsp;&nbsp; Resume</a</li>
         </ul>
     </nav>
 </div>
