--- a/index.html
+++ b/index.html
@@ -183,18 +183,7 @@
         <h1>Skills</h1>
         <p>Languages: PowerShell (Windows). Skills: Azure, Mobile Device Management (MDM), Office 365 ,Identity Manager Configuration & Integration, Nexthink DEX.Report End User support and Tranning</p>
     </div>
-    </ul>
-                    </p>
-                    <p>
-                        <ul style="padding-bottom:10px;"><b>Tools:</b> 
-                            Azure AD,
-                            Nexthink DEX,
-                            Service Now,
-                            JIRA-Confluence,
-                            Splunk logs
-            
-                        </ul>
-                    </p>
+    <p>Tools: Azure AD, Nexthink DEX, Servicenow, JIRA, Jumpclouds</p>
     
     <div id="projects" class="section">
         <h1>Projects</h1>
