--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ Administered Office365 environment, including Exchange Online, SharePoint,
 Teams, and OneDrive.
 Managed user accounts, permissions, and access controls.
 Provided technical support and troubleshooting for M365-related issues.
-Assisted in the migration of on-premises systems to M365 cloud services.
+Assisted in the migration of on-premises systems to M365 cloud services.<br>
 Unisys [ SDA]
 2018–2022
 - Designed and implemented access management and EUC solution,
