--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             <h1>Skills</h1>
             <div class="skills-list">
                 <img src="powershell-logo.png" alt="PowerShell" title="PowerShell">
-                <img src="azure-logo.png" alt="Azure" title="Azure">
+                <img src="Azure.jfif" alt="Azure" title="Azure">
                 <img src="mdm-logo.png" alt="MDM" title="MDM">
                 <img src="office365-logo.png" alt="Office 365" title="Office 365">
                 <img src="identity-manager-logo.png" alt="Identity Manager" title="Identity Manager">
@@ -222,7 +222,7 @@
         <div class="section">
             <h1>Tools</h1>
             <div class="tools-list">
-                <img src="azure-ad-logo.png" alt="Azure AD" title="Azure AD">
+                <img src="Azure.jfif" alt="Azure AD" title="Azure AD">
                 <img src="nexthink-dex-logo.png" alt="Nexthink DEX" title="Nexthink DEX">
                 <img src="servicenow-logo.png" alt="ServiceNow" title="ServiceNow">
                 <img src="jira-logo.png" alt="JIRA" title="JIRA">
