--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 <img src="mdm-logo.png" alt="MDM" title="MDM">
                 <img src="office365-logo.png" alt="Office 365" title="Office 365">
                 <img src="identity-manager-logo.png" alt="Identity Manager" title="Identity Manager">
-                <img src="nexthink-logo.png" alt="Nexthink" title="Nexthink">
+                <img src="nexthink-logo.png" alt="Remote Desktop Support" title="Remote Desktop Support">
             </div>
         </div>
         
