--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         <div id="skills" class="section">
             <h1>Skills</h1>
             <div class="skills-list">
-                <img src="powershell-logo.png" alt="PowerShell" title="PowerShell">
+                <img src="powershell.png" alt="PowerShell" title="PowerShell">
                 <img src="Azure.jfif" alt="Azure" title="Azure">
                 <img src="mdm-logo.png" alt="MDM" title="MDM">
                 <img src="office365-logo.png" alt="Office 365" title="Office 365">
