--- a/index.html
+++ b/index.html
@@ -241,12 +241,12 @@
         <div id="skills" class="section">
             <h1>Skills</h1>
             <div class="skills-list">
-                <img src="powershell.png" alt="PowerShell" title="PowerShell">
+                <img src="Powershell.png" alt="PowerShell" title="PowerShell">
                 <img src="Azure.jfif" alt="Azure" title="Azure">
-                <img src="mdm-logo.png" alt="MDM" title="MDM">
+                <img src="intune.png" alt="MDM" title="MDM">
                 <img src="office365-logo.png" alt="Office 365" title="Office 365">
-                <img src="identity-manager-logo.png" alt="Identity Manager" title="Identity Manager">
-                <img src="nexthink-logo.png" alt="Remote Desktop Support" title="Remote Desktop Support">
+                <img src="IAM.png" alt="Identity Manager" title="Identity Manager">
+                <img src="Nex.jfif" alt="Remote Desktop Support" title="Remote Desktop Support">
             </div>
         </div>
         
