--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 <img src="Powershell.png" alt="PowerShell" title="PowerShell">
                 <img src="Azure.jfif" alt="Azure" title="Azure">
                 <img src="intune.png" alt="MDM" title="MDM">
-                <img src="office365-logo.png" alt="Office 365" title="Office 365">
+                <img src="download.jfif" alt="Office 365" title="Office 365">
                 <img src="IAM.png" alt="Identity Manager" title="Identity Manager">
                 <img src="Nex.jfif" alt="Remote Desktop Support" title="Remote Desktop Support">
             </div>
