--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
             <div class="contact-icons">
                 <div>
                     <i class="fa fa-linkedin"></i>
-                    <span>https://in.linkedin.com/in/yankee-majumder-6870ba134</span>
+                    <span>linkedin</span>
                 </div>
                 <div>
                     <i class="fa fa-github"></i>
