--- a/index.html
+++ b/index.html
@@ -313,14 +313,18 @@
                 <button type="submit">Send Message</button>
             </form>
             <div class="contact-icons">
+                <a href="https://in.linkedin.com/in/yankee-majumder-6870ba134" target="_blank" rel="noopener noreferrer">
                 <div>
                     <i class="fa fa-linkedin"></i>
                     <span>linkedin</span>
                 </div>
+                </a>
+                <a href="https://github.com/yourprofile" target="_blank" rel="noopener noreferrer">
                 <div>
                     <i class="fa fa-github"></i>
                     <span>GitHub</span>
                 </div>
+                </a>
                 <div>
                     <i class="fa fa-twitter"></i>
                     <span>Twitter</span>
