--- a/index.html
+++ b/index.html
@@ -325,14 +325,18 @@
                     <span>GitHub</span>
                 </div>
                 </a>
+                <a href="https://twitter.com/yourprofile" target="_blank" rel="noopener noreferrer">
                 <div>
                     <i class="fa fa-twitter"></i>
                     <span>Twitter</span>
                 </div>
+                </a>
+                <a href="https://www.facebook.com/yourprofile" target="_blank" rel="noopener noreferrer">
                 <div>
                     <i class="fa fa-facebook"></i>
                     <span>Facebook</span>
                 </div>
+                </a>
             </div>
         </div>
     </div>
