--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             <div class="skills-list">
                 <img src="Powershell.png" alt="PowerShell" title="PowerShell">
                 <img src="Azure.jfif" alt="Azure" title="Azure">
-                <img src="intune.png" alt="MDM" title="MDM">
+                <img src="Intune.png" alt="MDM" title="Mobile Device management">
                 <img src="download.jfif" alt="Office 365" title="Office 365">
                 <img src="IAM.png" alt="Identity Manager" title="Identity Manager">
                 <img src="Nex.jfif" alt="Remote Desktop Support" title="Remote Desktop Support">
