--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             <div class="skills-list">
                 <img src="Powershell.png" alt="PowerShell" title="PowerShell">
                 <img src="Azure.jfif" alt="Azure" title="Azure">
-                <img src="Intune.png" alt="MDM" title="Mobile Device management">
+                <img src="intune.png" alt="MDM" title="Mobile Device management">
                 <img src="download.jfif" alt="Office 365" title="Office 365">
                 <img src="IAM.png" alt="Identity Manager" title="Identity Manager">
                 <img src="Nex.jfif" alt="Remote Desktop Support" title="Remote Desktop Support">
@@ -294,7 +294,7 @@
             <div class="experience-item">
                 <img src="company2-logo.png" alt="Company 2">
                 <div>
-                    <h2>Job Title - Company 2</h2>
+                    <h2>Support Analyst - Unisys 2</h2>
                     <p>Details about your role and achievements at Company 2.</p>
                     <div class="skills-list">
                         <img src="skill3.png" alt="Skill 3" title="Skill 3">
