--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             <div class="skills-list">
                 <img src="Powershell.png" alt="PowerShell" title="PowerShell">
                 <img src="Azure.jfif" alt="Azure" title="Azure">
-                <img src="intune.png" alt="MDM" title="Mobile Device management">
+                <img src="Intune.png" alt="MDM" title="Mobile Device management">
                 <img src="download.jfif" alt="Office 365" title="Office 365">
                 <img src="IAM.png" alt="Identity Manager" title="Identity Manager">
                 <img src="Nex.jfif" alt="Remote Desktop Support" title="Remote Desktop Support">
@@ -257,9 +257,9 @@
 
  <img src="ServiceNow-Logo-2021.png" alt="ServiceNow" title="ServiceNow">
                 <img src="SCCM-Logo.png" alt="SCCM" title="SCCM">
-                <img src="sccm.png" alt="SCCM" title="SCCM">
-                <img src="vmware.png" alt="VMware" title="VMware">
-                <img src="veritas.png" alt="Veritas" title="Veritas">
+                <img src="sccm.png" alt="Azure" title="Azure">
+                <img src="vmware.png" alt="Intune" title="Intune">
+                <img src="veritas.png" alt="Nexthink" title="Nexthink">
             </div>
         </div>
 
