--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <li><a href="#certification">Certification</a></li>
             <li><a href="#experience">Experience</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="Resume.pdf" class="nav-links" style="background-color: rgba(177, 247, 214, 0.5);"><i class="fa fa-download"></i>&nbsp;&nbsp; Resume</a></li>
+            <li><a href="Resume" class="nav-links" style="background-color: rgba(177, 247, 214, 0.5);"><i class="fa fa-download"></i>&nbsp;&nbsp; Resume</a></li>
         </ul>
     </nav>
     
