--- a/index.html
+++ b/index.html
@@ -241,12 +241,12 @@
         <div id="skills" class="section">
             <h1>Skills</h1>
             <div class="skills-list">
-                <img src="Powershell.png" alt="PowerShell" title="PowerShell">
-                <img src="Azure.jfif" alt="Azure" title="Azure">
+                <img src="script.png" alt="PowerShell scripting" title="PowerShell scripting">
+                <img src="Azure.png" alt="Cloud support" title="Cloud support">
                 <img src="Intune.png" alt="MDM" title="Mobile Device management">
                 <img src="download.jfif" alt="Office 365" title="Office 365">
-                <img src="IAM.png" alt="Identity Manager" title="Identity Manager">
-                <img src="Nex.jfif" alt="Remote Desktop Support" title="Remote Desktop Support">
+                <img src="IAM.png" alt="Identity Access management" title="Identity Access management">
+                <img src="DEX.png" alt="Digital Employee Experiance" title="Digital Eployee Experiance">
             </div>
         </div>
         
