--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         <div id="skills" class="section">
             <h1>Skills</h1>
             <div class="skills-list">
-                <img src="script.png" alt="PowerShell scripting" title="PowerShell scripting">
+                <img src="SCI.png" alt="Scripting" title="Scripting">
                 <img src="Azure.png" alt="Cloud support" title="Cloud support">
                 <img src="Intune.png" alt="MDM" title="Mobile Device management">
                 <img src="download.jfif" alt="Office 365" title="Office 365">
@@ -255,11 +255,11 @@
             <div class="tools-list">
                
 
- <img src="ServiceNow-Logo-2021.png" alt="ServiceNow" title="ServiceNow">
-                <img src="SCCM-Logo.png" alt="SCCM" title="SCCM">
-                <img src="sccm.png" alt="Azure" title="Azure">
-                <img src="vmware.png" alt="Intune" title="Intune">
-                <img src="veritas.png" alt="Nexthink" title="Nexthink">
+           <img src="OIP.jpeg" alt="ServiceNow" title="ServiceNow">
+                <img src="Powershell.png " alt="Powershell" title="Powershell">
+                <img src="Azure.jfif" alt="Azure" title="Azure">
+                <img src="intune.png" alt="Intune" title="Intune">
+                <img src="Nex.jfif" alt="Nexthink" title="Nexthink">
             </div>
         </div>
 
