--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
            <img src="OIP.jpeg" alt="ServiceNow" title="ServiceNow">
                 <img src="Powershell.png " alt="Powershell" title="Powershell">
                 <img src="Azure.jfif" alt="Azure" title="Azure">
-                <img src="intune.png" alt="Intune" title="Intune">
+                <img src="Intune.png" alt="Intune" title="Intune">
                 <img src="Nex.jfif" alt="Nexthink" title="Nexthink">
             </div>
         </div>
