--- a/index.html
+++ b/index.html
@@ -230,7 +230,22 @@
         
         <div id="home" class="section">
             <h1>Welcome to My Portfolio</h1>
-            <p>Hello everyone, I am a Senior System Engineer with over 6 years of experience in IT, currently working at Cognizant. Equipped with a deep understanding of IAM technology and privilege access management. Experienced Senior System Engineer with a track record of architecting and deploying EUC solutions, including VDI and application virtualization, device management. Proficient in troubleshooting complex EUC issues and skilled in technologies such as End User Support, Active Directory, Nexthink, and Microsoft Endpoint Manager.</p>
+            <p>Hello everyone, I am a Senior System Engineer with over 6 years of experience in IT, currently working at Cognizant.
+            Incident and Request management:
+           I have around 6-years of experience in IT Delivery, Active Directory, Identity Access management, IT support.
+
+Monitoring: Continuously monitoring IT infrastructures across various regions to identify and resolve issues, ensuring seamless and efficient performance.
+
+Analysis: Utilizing Nexthink's powerful analytics to interpret data, providing valuable insights for improving user experience and operatial efficiency for all managed clients.
+Nexthink Remote action to perform seamless troubleshooting and Nexthink alert for Monitoring.
+Nexthink to provide real-time visibility and actionable insights for clients.
+Ticketing support. 
+using Splunk logs to check user lockout data
+Technical skills: Service now, Azure, IAM tools, Next think IT certified.
+
+
+Knowledge on ITIL, EUC, Delivery management, DevsecOps, Other attributes include ability to do multitask
+ Technically sound and ability to learn any new tools and programming languagesr.</p>
         </div>
         
         <div id="education" class="section">
