--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <h1>Welcome to My Portfolio</h1>
             <p>Hello everyone, I am a Senior System Engineer with over 6 years of experience in IT, currently working at Cognizant.
             Incident and Request management:
-           I have around 6-years of experience in IT Delivery, Active Directory, Identity Access management, IT support.
+           Have deep knowledge on IT support,Access Management, SLA Management, Organization Users and Device Management, Collaboration support.
 
 Monitoring: Continuously monitoring IT infrastructures across various regions to identify and resolve issues, ensuring seamless and efficient performance.
 
