--- a/index.html
+++ b/index.html
@@ -951,7 +951,7 @@
             <li><a href="#certification">Certifications</a></li>
             <li><a href="#experience">Experience</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="Resume.pdf" class="resume-btn" target="_blank"><i class="fas fa-download"></i> Resume</a></li>
+            <li><a href="67917d41-7307-4f35-a03e-5e5a25c2fd19.pdf" class="resume-btn" target="_blank"><i class="fas fa-download"></i> Resume</a></li>
         </ul>
     </nav>
     
