--- a/index.html
+++ b/index.html
@@ -960,7 +960,7 @@
         <div class="hero-content">
             <div class="hero-text">
                 <h1>Yankee Majumder</h1>
-                <div class="subtitle">Senior System Engineer</div>
+                <div class="subtitle">Technical Lead</div>
                 <div class="description">
                     Experienced IT professional with 6+ years in system engineering, specializing in IT support, 
                     access management, monitoring, and digital employee experience. Currently driving innovation 
@@ -1138,7 +1138,7 @@
             <div class="experience-item">
                 <div class="experience-header">
                     <div class="experience-info">
-                        <h3>Senior System Engineer</h3>
+                        <h3>Technical Lead</h3>
                         <div class="company">Cognizant Technology Solutions</div>
                         <div class="duration">2018 - Present</div>
                     </div>
