Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1086,6 +1086,9 @@
             </h3>
             <p>Created an advanced learning assistance platform powered by Google's Vertex AI that generates customized quizzes, tracks learning progress, and monitors student performance. Designed specifically for exam preparation and IT learning with intelligent assessment capabilities.</p>
             <div class="technologies">
+                <a href="https://github.com/yankeeDamn/term-deposit-predictor" target="_blank" style="color: var(--primary-color); text-decoration: none; font-weight: 600;">
+                    <i class="fab fa-github"></i> View on GitHub
+                </a>
                 <span class="tech-tag">Google Vertex AI</span>
                 <span class="tech-tag">Machine Learning</span>
                 <span class="tech-tag">Educational Technology</span>
@@ -1452,4 +1455,5 @@
 </body>
 </html>
 ```
+
 
